# Senior-Capstone

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  macIcon.icns  runCmake.sh  runCmakeRelease.sh
assets/: recent_activity.txt
deprecated/: temp.cpp
include/: App.h  AppController.h  AppState.h  BrushManager.h  BrushTipLoader.h  BrushTool.h  Canvas.h  CanvasManager.h  CanvasManipulation.h  ColorPicker.h  CursorMode.h  DefaultBrush.h  DrawEngine.h  DrawSystem.h  FrameRenderer.h  Globals.h  InputManager.h  Renderer.h  StrokeManager.h  UI.h  Window.h  Zooming.h
src/: App.cpp  AppController.cpp  AppState.cpp  BrushManager.cpp  BrushTipLoader.cpp  BrushTool.cpp  Canvas.cpp  CanvasManager.cpp  CanvasManipulation.cpp  ColorPicker.cpp  DefaultBrush.cpp  DrawEngine.cpp  DrawSystem.cpp  FrameRenderer.cpp  Globals.cpp  InputManager.cpp  Renderer.cpp  StrokeManager.cpp  UI.cpp  Window.cpp  Zooming.cpp  main.cpp  test.cpp
